# nomad-ait-echt-oasis

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  gen_schema_docs.py  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml  requirements_docs.txt
.dev/: check_version.py
docs/: gen_schema_docs.py  index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/ait_echt_oasis/apis/: __init__.py  api.py
src/ait_echt_oasis/normalizers/: __init__.py  normalizer.py
src/ait_echt_oasis/parsers/: __init__.py  parser.py
src/ait_echt_oasis/schema_packages/: __init__.py  schema_package.py
src/nomad_ait_echt_oasis/apis/: __init__.py  api.py
src/nomad_ait_echt_oasis/apps/: __init__.py
src/nomad_ait_echt_oasis/normalizers/: __init__.py  normalizer.py
src/nomad_ait_echt_oasis/parsers/: __init__.py  parser.py
src/nomad_ait_echt_oasis/schema_packages/: __init__.py  schema_package.py
src/nomad_ait_echt_oasis/schema_packages/infrastructure/: __init__.py  v0.py
src/nomad_ait_echt_oasis/schema_packages/physical_vapor_deposition/: __init__.py  v0.py
src/nomad_ait_echt_oasis/schema_packages/sputter_deposition/: __init__.py  v0.py
src/nomad_ait_echt_oasis/schema_packages/vapor_deposition/: __init__.py  v0.py
tests/: conftest.py
tests/apis/: test_api.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
tests/schema_packages/: test_infrastructure.py  test_sputter_deposition.py  test_vapor_deposition.py
tutorial/: tutorial.html
